package Board;

public class Brewery extends Ownable{

    public Brewery(String name, int position, String type, String color, int[] rent, int price) {
        super(name, position, color, rent, price);
    }
}
