package Board;

public class Ferry extends Ownable{

    public Ferry(String name, int position, String type, String color, int[] rent, int price) {
        super(name, position, color, rent, price);
    }
}
