package Board;

public class GoToPrison extends Square{
    public GoToPrison(String name, int position){
        super(name, position);
    }
}
