package Board;

public class Prison extends Square{

    public Prison(String name, int position){
        super(name, position);
    }
}
