package Board;

public class Refugee extends Square{
    public Refugee(String name, int position){
        super(name, position);
    }
}
